# sidantrip

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
specs/: architecture-decisions.md  sidantrip.md
src/sidantrip/: main.py  server.py
src/sidantrip/crews/: planner_crew.py  researcher_crew.py
src/sidantrip/crews/config/: agents.yaml  tasks.yaml
src/sidantrip/planner/: __init__.py  agent.py  parser.py  prompts.py
src/sidantrip/tools/: db_tools.py
tests/: test_db_tools.py  test_delta_application.py  test_delta_parsing.py  test_planner_integration.py  test_server.py
